--- a/content/resources/24-900s22.md
+++ b/content/resources/24-900s22.md
@@ -1,16 +1,21 @@
 ---
 body: ''
 content_type: resource
-description: ''
-draft: ''
+description: A close-up of the Bible as translated into the Massachusett language
+  by John Eliot in the 16th century.
+draft: false
 file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/introduction-to-linguistics/24-900s22.jpg
 file_type: image/jpeg
 image_metadata:
-  caption: ''
-  credit: ''
+  caption: A portion of the 23rd Psalm, as translated by John Eliot into the language
+    of the indigenous Wampanoag people of Massachusetts in the late 16th century.
+    In the 21st century, that translation and other surviving written documents have
+    formed the basis for efforts to re-establish Wampanoag as a living language. (Public
+    domain image courtesy of the [Internet Archive](https://archive.org/details/mamussewunneetup00elio/page/n521/mode/2up).)
+  credit: Public domain image courtesy of the [Internet Archive](https://archive.org/details/mamussewunneetup00elio/page/n521/mode/2up).
   image-alt: ''
 learning_resource_types: []
-license: ''
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Image
 title: 24-900s22.jpg
 uid: 467fe435-68d3-4d3e-9ef6-ad4f94edb839
