Sync all content

--- a/content/resources/24-900s22-th.md
+++ b/content/resources/24-900s22-th.md
@@ -4,7 +4,7 @@ content_type: resource
 description: A close-up of the printed text of John Eliot's 1663 translation of the
   Bible.
 draft: false
-file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/introduction-to-linguistics/24-900s22-th.jpg
+file: /courses/introduction-to-linguistics/24-900s22-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A portion of the 23rd Psalm, as translated by John Eliot into the language
