--- a/content/resources/24-900s22.md
+++ b/content/resources/24-900s22.md
@@ -4,7 +4,7 @@ content_type: resource
 description: A close-up of the Bible as translated into the Massachusett language
   by John Eliot in the 16th century.
 draft: false
-file: https://ol-ocw-studio-app-production.s3.amazonaws.com/courses/introduction-to-linguistics/24-900s22.jpg
+file: /courses/introduction-to-linguistics/24-900s22.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A portion of the 23rd Psalm, as translated by John Eliot into the language
