Sync all content

--- a/content/resources/24-900s22-th.md
+++ b/content/resources/24-900s22-th.md
@@ -1,8 +1,7 @@
 ---
 body: ''
 content_type: resource
-description: A close-up of the printed text of John Eliot's 1663 translation of the
-  Bible.
+description: ''
 draft: false
 file: /courses/introduction-to-linguistics-spring-2022/24-900s22-th.jpg
 file_type: image/jpeg
@@ -29,3 +28,4 @@ video_metadata:
   youtube_description: ''
   youtube_id: ''
 ---
+A close-up of the printed text of John Eliot's 1663 translation of the Bible.
