--- a/content/resources/24-900s22.md
+++ b/content/resources/24-900s22.md
@@ -1,8 +1,7 @@
 ---
 body: ''
 content_type: resource
-description: A close-up of the Bible as translated into the Massachusett language
-  by John Eliot in the 16th century.
+description: ''
 draft: false
 file: /courses/introduction-to-linguistics-spring-2022/24-900s22.jpg
 file_type: image/jpeg
@@ -29,3 +28,4 @@ video_metadata:
   youtube_description: ''
   youtube_id: ''
 ---
+A close-up of the Bible as translated into the Massachusett language by John Eliot in the 16th century.
