--- a/content/resources/mit24_600s22_lec6.md
+++ b/content/resources/mit24_600s22_lec6.md
@@ -1,16 +1,18 @@
 ---
 body: ''
 content_type: resource
-description: ''
-draft: ''
+description: This PDF contains lecture notes from *24.900 Introduction to Linguistics*,
+  taught by Prof. Norvin W. Richards.
+draft: false
 file: /courses/introduction-to-linguistics-spring-2022/mit24_600s22_lec6.pdf
 file_type: application/pdf
 image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
-license: ''
+learning_resource_types:
+- Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Document
 title: MIT24_600s22_lec6.pdf
 uid: 821eae1e-2606-4ee1-9d10-7158413aae1d
