--- a/content/resources/24-900s22.md
+++ b/content/resources/24-900s22.md
@@ -7,10 +7,10 @@ file: /courses/introduction-to-linguistics-spring-2022/24-900s22.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A portion of the 23rd Psalm, as translated by John Eliot into the language
-    of the Wampanoag people of Massachusetts in the late 16th century. In the 21st
-    century, that translation and other surviving written documents have formed the
-    basis for efforts to re-establish Wampanoag as a living language. (Public domain
-    image courtesy of the [Internet Archive](https://archive.org/details/mamussewunneetup00elio/page/n521/mode/2up).)
+    of the Wampanoag people of Massachusetts in the 17th century. In the 21st century,
+    that translation and other surviving written documents have formed the basis for
+    efforts to re-establish Wampanoag as a living language. (Public domain image courtesy
+    of the [Internet Archive](https://archive.org/details/mamussewunneetup00elio/page/n521/mode/2up).)
   credit: Public domain image courtesy of the [Internet Archive](https://archive.org/details/mamussewunneetup00elio/page/n521/mode/2up).
   image-alt: ''
 learning_resource_types: []
