--- a/content/resources/ocw_24900_lecture05_2022feb15.md
+++ b/content/resources/ocw_24900_lecture05_2022feb15.md
@@ -8,18 +8,29 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture05_2022feb15.mp4
+title: 'Lecture 5: Phonetics, Part 1'
 uid: 77309e2b-7480-4464-8b7a-8030ab7157b4
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1rniZ0KvzFxjTzFGIkyO5la1Kz3E6WgHY_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/xZ8mnJPu95Q/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1rniZ0KvzFxjTzFGIkyO5la1Kz3E6WgHY_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: articulation, voicing, stops, fricative, vowel, consonant, bilabial,
+    velar, glottal, palatal, nasal
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video introduces the basic vocabulary used in discussing the sounds of speech.\n\
+    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: xZ8mnJPu95Q
 ---
+This video introduces the basic vocabulary used in discussing the sounds of speech.
