--- a/content/resources/ocw_24900_lecture09_2022mar03.md
+++ b/content/resources/ocw_24900_lecture09_2022mar03.md
@@ -8,18 +8,28 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture09_2022mar03.mp4
+title: 'Lecture 9: Phonology, Part 2'
 uid: 3a565cdd-b89f-42a7-9cb9-0713a6c0b13c
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1qZpCWDnGS-YUqutMXAzxO3hMJL3cfJp9_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/-Pg11JHzUTo/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1qZpCWDnGS-YUqutMXAzxO3hMJL3cfJp9_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: accent, compounds, phonotactics, devoicing, assimilation
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video discusses phonology and phonotactics in Japanese, English, and Arabic.\n\
+    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: -Pg11JHzUTo
 ---
+This video discusses phonology and phonotactics in Japanese, English, and Arabic.
