Sync all content

--- a/content/resources/ocw_24900_lecture11_2022mar10.md
+++ b/content/resources/ocw_24900_lecture11_2022mar10.md
@@ -8,18 +8,29 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture11_2022mar10.mp4
+title: 'Lecture 11: Syntax, Part 1'
 uid: 4a7c2034-e21e-4994-983d-2fc5e4d4b266
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/15OsasEW2g-fPtnYqQyvkcaaoJYNTw_ou_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/q7pPG7V2ack/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/15OsasEW2g-fPtnYqQyvkcaaoJYNTw_ou_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: syntax, constituent, topicalization, coordination, clefting, verb phrase,
+    prepositional phrase
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video introduces the fundamentals of how words are put together to form sentences.\n\
+    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: q7pPG7V2ack
 ---
+This video introduces the fundamentals of how words are put together to form sentences.
