--- a/content/resources/ocw_24900_lecture12_2022mar15.md
+++ b/content/resources/ocw_24900_lecture12_2022mar15.md
@@ -8,18 +8,28 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture12_2022mar15.mp4
+title: 'Lecture 12: Syntax, Part 2'
 uid: 91fb9545-be15-437a-9830-fda2e7acd5e8
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1q19CKqBXkYc1Zd9ak_IanfaZYPlTjOJ7_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/-OeyjP2zri4/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1q19CKqBXkYc1Zd9ak_IanfaZYPlTjOJ7_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: recursion, competence, ambiguity, node, sister, mother, constituent
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video demonstrates how syntactic trees are used to show the structure of\
+    \ sentences.\nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: -OeyjP2zri4
 ---
+This video demonstrates how syntactic trees are used to show the structure of sentences.
