--- a/content/resources/ocw_24900_lecture15_2022mar31.md
+++ b/content/resources/ocw_24900_lecture15_2022mar31.md
@@ -8,18 +8,28 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture15_2022mar31.mp4
+title: 'Lecture 15: Syntax, Part 5'
 uid: 78484b0f-9e04-4ae3-818a-c2d9e63aa447
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1674PlF6St7rQdmyY6CeL9me_tAK1FYFB_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/wrcQ5wUVxd0/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1674PlF6St7rQdmyY6CeL9me_tAK1FYFB_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: wh-movement, language acquisition, projection principle
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video discusses the acquisition of wh-movement and the extended projection\
+    \ principle.\nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: wrcQ5wUVxd0
 ---
+This video discusses the acquisition of wh-movement and the extended projection principle.
