Sync all content

--- a/content/resources/ocw_24900_lecture17_2022apr07.md
+++ b/content/resources/ocw_24900_lecture17_2022apr07.md
@@ -8,18 +8,29 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture17_2022apr07.mp4
+title: 'Lecture 17: Syntax, Part 7, and Semantics, Part 1'
 uid: 4ec7676d-4ec4-4082-bf2f-f0b0c941dea9
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1MptwG2vU-HESQLFjTdgVvgS2K4ys2QJY_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/Di8e2opeGA0/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1MptwG2vU-HESQLFjTdgVvgS2K4ys2QJY_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: wh-islands, compositionality, intension, extension, entailment, implicature,
+    presupposition
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video concludes the discussion of syntax and begins the examination of semantics.\n\
+    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: Di8e2opeGA0
 ---
+This video concludes the discussion of syntax and begins the examination of semantics.
