Sync all content

--- a/content/resources/ocw_24900_lecture19_2022apr14.md
+++ b/content/resources/ocw_24900_lecture19_2022apr14.md
@@ -8,18 +8,29 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture19_2022apr14.mp4
+title: 'Lecture 19: Semantics, Part 3'
 uid: b3933419-4efc-4ba2-85cb-23f4c33eb8a6
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/11REkJkMCHID034oDPHdI1L1vG7aDmanA_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/vWC6Q3Dv1ws/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/11REkJkMCHID034oDPHdI1L1vG7aDmanA_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: quantifier raising, ellipsis, parallelism, identity condition, ACD,
+    downward entailing
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video discusses the semantics of quantifiers, including negative polarity\
+    \ items.\nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: vWC6Q3Dv1ws
 ---
+This video discusses the semantics of quantifiers, including negative polarity items.
