Sync all content

--- a/content/resources/ocw_24900_lecture20_2022apr19.md
+++ b/content/resources/ocw_24900_lecture20_2022apr19.md
@@ -8,18 +8,28 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture20_2022apr19.mp4
+title: 'Lecture 20: Semantics, Part 4'
 uid: c7cc73f2-4d1e-46c2-b9be-555e3da3f3e7
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1iscT5XvcBr6Q7tRKpqW1B91yKtpMRuDi_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/VymHeBjublw/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1iscT5XvcBr6Q7tRKpqW1B91yKtpMRuDi_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: binding theory, anaphors, c-command, reconstruction
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video discusses the semantics of pronouns, anaphora, and binding theory.\n\
+    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: VymHeBjublw
 ---
+This video discusses the semantics of pronouns, anaphora, and binding theory.
