--- a/content/resources/ocw_24900_lecture21_2022apr21.md
+++ b/content/resources/ocw_24900_lecture21_2022apr21.md
@@ -8,18 +8,29 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture21_2022apr21.mp4
+title: 'Lecture 21: Semantics, Part 5'
 uid: 8e9d88ba-642e-4e33-9cf8-1d8b138b70d3
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1EszDHIhvb-PvBwxjgNAwoWCi90TygE3T_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/msSCIvkjbHI/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1EszDHIhvb-PvBwxjgNAwoWCi90TygE3T_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: binding theory, quantifier scope, ellipsis, sluicing, preposition stranding
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video discusses semantic interpretations of sentences, particularly ones\
+    \ featuring ellipsis. \nLicense: Creative Commons BY-NC-SA\nMore information at\
+    \ https://ocw.mit.edu/terms\nMore courses at https://ocw.mit.edu\nSupport OCW\
+    \ at http://ow.ly/a1If50zVRlQ\nWe encourage constructive comments and discussion\
+    \ on OCW\u2019s YouTube and other social media channels. Personal attacks, hate\
+    \ speech, trolling, and inappropriate comments are not allowed and may be removed.\
+    \ More details at https://ocw.mit.edu/comments.\n"
   youtube_id: msSCIvkjbHI
 ---
+This video discusses semantic interpretations of sentences, particularly ones featuring ellipsis.
