--- a/content/resources/ocw_24900_lecture22_2022spr26.md
+++ b/content/resources/ocw_24900_lecture22_2022spr26.md
@@ -8,18 +8,30 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture22_2022spr26.mp4
+title: 'Lecture 22: Dialects'
 uid: 29e3c9a0-30af-4d3e-8438-3874acc0f1c4
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1UWqieveMr4b2mJWuWIM1Nxx4qoNL9r6p_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/6QRlpk8ZmPI/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1UWqieveMr4b2mJWuWIM1Nxx4qoNL9r6p_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: negative polarity items, negative concord, AAE, AAVE, Ebonics, copula
+    drop
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video discusses differences in how languages deal with negatives, and explains\
+    \ some of the grammatical constraints that apply in African American English.\n\
+    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: 6QRlpk8ZmPI
 ---
+This video discusses differences in how languages deal with negatives, and explains some of the grammatical constraints that apply in African American English.
