Sync all content

--- a/content/resources/ocw_24900_lecture23_2022apr28.md
+++ b/content/resources/ocw_24900_lecture23_2022apr28.md
@@ -8,18 +8,30 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture23_2022apr28.mp4
+title: 'Lecture 23: Historical Linguistics'
 uid: b560163d-cd89-4d21-b98e-3d53df5cfc63
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1INQT8RnPt_b1LJm_g5kQ_ByluD5u_NWO_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/5itfLAwQol8/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1INQT8RnPt_b1LJm_g5kQ_ByluD5u_NWO_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: Grimm's Law, protolanguages, Neogrammarian Hypothesis, chain shifts,
+    glottochronology
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video explains how semantic drift, recuttings, and sound changes over time\
+    \ cause languages to evolve and/or split into distinctly different languages.\n\
+    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: 5itfLAwQol8
 ---
+This video explains how semantic drift, recuttings, and sound changes over time cause languages to evolve and/or split into distinctly different languages.
