--- a/content/resources/ocw_24900_lecture24_2022may03.md
+++ b/content/resources/ocw_24900_lecture24_2022may03.md
@@ -8,18 +8,30 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture24_2022may03.mp4
+title: 'Lecture 24: Endangered Languages'
 uid: a00ff79c-e7c7-433c-a7d3-d626e54abe93
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1DbBdWkispOb6VReTZ7KCoYhQ3gTO1_6C_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/LOsNklq-dH8/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1DbBdWkispOb6VReTZ7KCoYhQ3gTO1_6C_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: Wampanoag, indigenous languages, Eliot Bible, lexicography, language
+    immersion
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video describes the efforts to revive the Wampanoag language, and the ways\
+    \ historical documents can be used to reconstruct the grammar of an extinct language.\n\
+    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: LOsNklq-dH8
 ---
+This video describes the efforts to revive the Wampanoag language, and the ways historical documents can be used to reconstruct the grammar of an extinct language.
