--- a/content/resources/ocw_24900_lecture25_2022may05.md
+++ b/content/resources/ocw_24900_lecture25_2022may05.md
@@ -8,18 +8,30 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture25_2022may05.mp4
+title: 'Lecture 25: Language Acquisition'
 uid: 3e7780d9-4df5-418b-9f53-ef88f02d8c0b
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1FRgFrTY2rk4Xuiy0lIRJRJ7J3Zswb-Lj_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/caLQIEeYpEk/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1FRgFrTY2rk4Xuiy0lIRJRJ7J3Zswb-Lj_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: universal grammar, critical period, root infinitive, phonotactics, sucking
+    rate tasks
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video deals with how young children learn to understand and use language,\
+    \ as well as touching on the hypothesis that some aspects of grammar are innate.\n\
+    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: caLQIEeYpEk
 ---
+This video deals with how young children learn to understand and use language, as well as touching on the hypothesis that some aspects of grammar are innate.
