--- a/content/resources/ocw_24900_lecture26_2022may10.md
+++ b/content/resources/ocw_24900_lecture26_2022may10.md
@@ -8,18 +8,28 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Videos
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Video
-title: OCW_24.900_Lecture26_2022may10.mp4
+title: 'Lecture 26: Signed Languages'
 uid: 7453a670-531b-4a48-8a11-74b50de0db4c
 video_files:
   video_captions_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1b7TZWEkidhukCE_FYZbnFFTFahpMjnuk_transcript.webvtt
   video_thumbnail_file: https://img.youtube.com/vi/12UWP2ZhUl0/default.jpg
   video_transcript_file: /courses/introduction-to-linguistics-spring-2022-spring-2022/1b7TZWEkidhukCE_FYZbnFFTFahpMjnuk_transcript.pdf
 video_metadata:
-  video_speakers: ''
-  video_tags: ''
-  youtube_description: ''
+  video_speakers: Prof. Norvin A. Richards
+  video_tags: sign language, ASL, minimal word requirement, loci, role shift
+  youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
+    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/introduction-to-linguistics-spring-2022/\n\
+    YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
+    This video deals with the linguistic aspects of signed rather than spoken languages.\n\
+    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
+    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
+    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: 12UWP2ZhUl0
 ---
+This video deals with the linguistic aspects of signed rather than spoken languages.
