--- a/content/resources/ocw_24900_lecture08_2022mar01.md
+++ b/content/resources/ocw_24900_lecture08_2022mar01.md
@@ -25,12 +25,12 @@ video_metadata:
     \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     This video discusses rules by which morphemes are realized in pronunciation in\
-    \ various languages.\nLicense: Creative Commons BY-NC-SA\nMore information at\
-    \ https://ocw.mit.edu/terms\nMore courses at https://ocw.mit.edu\nSupport OCW\
-    \ at http://ow.ly/a1If50zVRlQ\nWe encourage constructive comments and discussion\
-    \ on OCW\u2019s YouTube and other social media channels. Personal attacks, hate\
-    \ speech, trolling, and inappropriate comments are not allowed and may be removed.\
-    \ More details at https://ocw.mit.edu/comments.\n"
+    \ various languages. [Note: No video is available for Lecture 7.]\nLicense: Creative\
+    \ Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\nMore courses\
+    \ at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\nWe encourage\
+    \ constructive comments and discussion on OCW\u2019s YouTube and other social\
+    \ media channels. Personal attacks, hate speech, trolling, and inappropriate comments\
+    \ are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: SyM5j0SeDRQ
 ---
 This video discusses rules by which morphemes are realized in pronunciation in various languages.
