--- a/content/resources/ocw_24900_lecture24_2022may03.md
+++ b/content/resources/ocw_24900_lecture24_2022may03.md
@@ -23,14 +23,14 @@ video_metadata:
   video_tags: Wampanoag, indigenous languages, Eliot Bible, lexicography, language
     immersion
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
-    This video describes the efforts to revive the Wampanoag language, and the ways\
+    \nThis video describes the efforts to revive the Wampanoag language, and the ways\
     \ historical documents can be used to reconstruct the grammar of an extinct language.\n\
-    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    \nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
     More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
-    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
-    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \nWe encourage constructive comments and discussion on OCW\u2019s YouTube and\
+    \ other social media channels. Personal attacks, hate speech, trolling, and inappropriate\
     \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: LOsNklq-dH8
 ---
