--- a/content/resources/ocw_24900_lecture26_2022may10.md
+++ b/content/resources/ocw_24900_lecture26_2022may10.md
@@ -22,13 +22,13 @@ video_metadata:
   video_speakers: Prof. Norvin A. Richards
   video_tags: sign language, ASL, minimal word requirement, loci, role shift
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
-    This video deals with the linguistic aspects of signed rather than spoken languages.\n\
-    License: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
+    \nThis video deals with the linguistic aspects of signed rather than spoken languages.\n\
+    \nLicense: Creative Commons BY-NC-SA\nMore information at https://ocw.mit.edu/terms\n\
     More courses at https://ocw.mit.edu\nSupport OCW at http://ow.ly/a1If50zVRlQ\n\
-    We encourage constructive comments and discussion on OCW\u2019s YouTube and other\
-    \ social media channels. Personal attacks, hate speech, trolling, and inappropriate\
+    \nWe encourage constructive comments and discussion on OCW\u2019s YouTube and\
+    \ other social media channels. Personal attacks, hate speech, trolling, and inappropriate\
     \ comments are not allowed and may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: 12UWP2ZhUl0
 ---
