--- a/content/resources/ocw_24900_lecture21_2022apr21.md
+++ b/content/resources/ocw_24900_lecture21_2022apr21.md
@@ -22,12 +22,12 @@ video_metadata:
   video_speakers: Prof. Norvin A. Richards
   video_tags: binding theory, quantifier scope, ellipsis, sluicing, preposition stranding
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
-    This video discusses semantic interpretations of sentences, particularly ones\
-    \ featuring ellipsis. \nLicense: Creative Commons BY-NC-SA\nMore information at\
-    \ https://ocw.mit.edu/terms\nMore courses at https://ocw.mit.edu\nSupport OCW\
-    \ at http://ow.ly/a1If50zVRlQ\nWe encourage constructive comments and discussion\
+    \nThis video discusses semantic interpretations of sentences, particularly ones\
+    \ featuring ellipsis. \n\nLicense: Creative Commons BY-NC-SA\nMore information\
+    \ at https://ocw.mit.edu/terms\nMore courses at https://ocw.mit.edu\nSupport OCW\
+    \ at http://ow.ly/a1If50zVRlQ\n\nWe encourage constructive comments and discussion\
     \ on OCW\u2019s YouTube and other social media channels. Personal attacks, hate\
     \ speech, trolling, and inappropriate comments are not allowed and may be removed.\
     \ More details at https://ocw.mit.edu/comments.\n"
