--- a/content/resources/ocw_24900_lecture06_2022feb17.md
+++ b/content/resources/ocw_24900_lecture06_2022feb17.md
@@ -23,15 +23,15 @@ video_metadata:
   video_tags: rounding, diphthongs, McGurk effect, open vowels, close vowels, front
     vowels, back vowels
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
-    This video presents more information on speech sounds, especially vowels. [Note:\
-    \ No video is available for Lecture 7.]\nLicense: Creative Commons BY-NC-SA\n\
+    \nThis video presents more information on speech sounds, especially vowels. [Note:\
+    \ No video is available for Lecture 7.]\n\nLicense: Creative Commons BY-NC-SA\n\
     More information at https://ocw.mit.edu/terms\nMore courses at https://ocw.mit.edu\n\
-    Support OCW at http://ow.ly/a1If50zVRlQ\nWe encourage constructive comments and\
-    \ discussion on OCW\u2019s YouTube and other social media channels. Personal attacks,\
-    \ hate speech, trolling, and inappropriate comments are not allowed and may be\
-    \ removed. More details at https://ocw.mit.edu/comments.\n"
+    Support OCW at http://ow.ly/a1If50zVRlQ\n\nWe encourage constructive comments\
+    \ and discussion on OCW\u2019s YouTube and other social media channels. Personal\
+    \ attacks, hate speech, trolling, and inappropriate comments are not allowed and\
+    \ may be removed. More details at https://ocw.mit.edu/comments.\n"
   youtube_id: NVQWWXhbUvs
 ---
 This video presents more information on speech sounds, especially vowels.
