--- a/content/resources/ocw_24900_lecture25_2022may05.md
+++ b/content/resources/ocw_24900_lecture25_2022may05.md
@@ -19,11 +19,11 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/caLQIEeYpEk/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1FRgFrTY2rk4Xuiy0lIRJRJ7J3Zswb-Lj_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: universal grammar, critical period, root infinitive, phonotactics, sucking
     rate tasks
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video deals with how young children learn to understand and use language,\
     \ as well as touching on the hypothesis that some aspects of grammar are innate.\n\
