Sync all content

--- a/content/resources/ocw_24900_lecture23_2022apr28.md
+++ b/content/resources/ocw_24900_lecture23_2022apr28.md
@@ -19,11 +19,11 @@ video_files:
   video_thumbnail_file: https://img.youtube.com/vi/5itfLAwQol8/default.jpg
   video_transcript_file: /courses/24-900-introduction-to-linguistics-spring-2022/1INQT8RnPt_b1LJm_g5kQ_ByluD5u_NWO_transcript.pdf
 video_metadata:
-  video_speakers: Prof. Norvin A. Richards
+  video_speakers: Prof. Norvin W. Richards
   video_tags: Grimm's Law, protolanguages, Neogrammarian Hypothesis, chain shifts,
     glottochronology
   youtube_description: "MIT 24.900 Introduction to Linguistics, Spring 2022\nInstructor:\
-    \ Prof. Norvin A. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
+    \ Prof. Norvin W. Richards\n\nView the complete course: https://ocw.mit.edu/courses/24-900-introduction-to-linguistics-spring-2022/\n\
     YouTube Playlist: https://www.youtube.com/playlist?list=PLUl4u3cNGP63BZGNOqrF2qf_yxOjuG35j\n\
     \nThis video explains how semantic drift, recuttings, and sound changes over time\
     \ cause languages to evolve and/or split into distinctly different languages.\n\
